--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
+    "mongoose": "^8.14.1",
     "motion": "^12.9.2",
     "next": "15.3.1",
     "react": "^19.0.0",
